...
import androidx.compose.ui.unit.dp
import la.devpicon.android.mydrawingsapplication.R
import la.devpicon.android.mydrawingsapplication.draw.StatComparison
import la.devpicon.android.mydrawingsapplication.ui.theme.MyDrawingsApplicationTheme
import kotlin.math.roundToInt

internal const val BLUE_TEAM_SLIDER_TEST_TAG = "blueTeamSlider"
internal const val RED_TEAM_SLIDER_TEST_TAG = "redTeamSlider"

@Composable
fun StatComparisonScreen(modifier: Modifier = Modifier) {
    var blueTeamValue by rememberSaveable { mutableIntStateOf(50) }
    var redTeamValue by rememberSaveable { mutableIntStateOf(50) }

...
